# futurist

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  PROTOCOL.md  README.md
src/: api.rs  ble.rs  crypto.rs  flash.rs  lib.rs  presets.rs  protocol.rs  telemetry.rs
src/cli/: config.rs  config_ui.rs  dash.rs  dump.rs  firmware_ui.rs  mod.rs
src/decode/: battery.rs  charger.rs  docking.rs  inverter.rs  mod.rs  vcu.rs
