[package]
name = "futurist"
version = "0.1.0"
edition = "2024"

[features]
default = ["dash"]
dash = ["dep:eframe", "dep:egui"]

[dependencies]
anyhow = "1"
btleplug = "0.11"
clap = { version = "4", features = ["derive", "env"] }
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = "1"
